# client

./: .gitignore  README.md  README_zh.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
.github/workflows/: build-all.yml  build-mac.yml  build-tauri.yml
SKILLs/: skills.config.json
SKILLs/desktop-control/: SKILL.md
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
native/macos-desktop/: binding.gyp
native/macos-desktop/src/: noobclaw_desktop.mm
native/win-desktop/: binding.gyp
native/win-desktop/src/: noobclaw_desktop_win.cc
resources/: com.noobclaw.browser.json
sandbox/agent-runner/: AGENT_SYSTEM_PROMPT.md
scripts/: _zip-helper.cjs  build-sidecar.js  electron-builder-hooks.cjs  fetch-chrome-extension.js  fetch-ffmpeg.js  generate-dmg-background.cjs  generate-dmg-background.js  nsis-installer.nsh  patch-macos-plist.js  prepare-tauri-resources.js  sync-version.js
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/chrome-extension/: background.js  content.js  manifest.json  popup.html
src-tauri/src/: lib.rs
src/main/: coworkStore.ts  main.ts  preload.ts  sidecar-server.ts  skillManager.ts  sqliteStore.ts
src/main/im/: dingtalkMediaDownload.ts  discordMediaDownload.ts  feishuGateway.ts  feishuMedia.ts  imCoworkHandler.ts  imGatewayManager.ts  imStore.ts  qqMediaDownload.ts  telegramMedia.ts  types.ts
src/main/libs/: anthropicClient.ts  browserBridge.ts  canvasHost.ts  canvasTools.ts  cdpBrowser.ts  cdpTools.ts  claudeSettings.ts  contextEngine.ts  coreFileTools.ts  coworkCompact.ts  coworkFormatTransform.ts  coworkOpenAICompatProxy.ts  coworkPathValidation.ts  coworkRunner.ts  coworkSandboxRuntime.ts  coworkSessionMemory.ts  coworkUtil.ts  desktopControlMcp.ts  dreamingEngine.ts  extractBundledZips.ts  knowledgeGraph.ts  mcpClient.ts  mediaPipeline.ts  mediaUnderstanding.ts  memoryStore.ts  memoryTools.ts  messageManager.ts  nativeDesktopMac.ts  nativeDesktopWin.ts  platformAdapter.ts  pythonRuntime.ts  queryEngine.ts  scheduler.ts  streamingToolExecutor.ts  systemProxy.ts  taskExecutor.ts  taskRegistry.ts  taskTools.ts  toolOrchestration.ts  toolPermissionPolicy.ts  (+3 more)
src/main/libs/scenario/: artifactWriter.ts  localExtractor.ts  phaseRunner.ts  platformLoginDriver.ts  riskGuard.ts  runRecords.ts  scenarioManager.ts  subPlatformRegistry.ts  taskRunReporter.ts  taskStore.ts  types.ts  viralPoolClient.ts  xhsDriver.ts
src/main/libs/video/: asr.ts  bgm.ts  billing.ts  compose.ts  deriveExtras.ts  ffmpegRuntime.ts  freeformWriter.ts  hotspotDouyinSource.ts  hotspotProvider.ts  hotspotTiktokSource.ts  htmlVideoRenderer.ts  mediaLimits.ts  pipeline.ts  publishCaptionWriter.ts  scriptWriter.ts  seedanceProvider.ts  stockProvider.ts  storyboardAnchor.ts  subtitles.ts  template-pipeline.ts  templateAnim.ts  templateHtmlWriter.ts  templateLibrary.ts  tts.ts  usedHotspotStore.ts  videoConfig.ts  videoLoginCheck.ts  videoRunWindow.ts
src/main/libs/voiceProviders/: webSpeechProvider.ts
src/renderer/: App.tsx  config.ts  index.css  main.tsx  noobclaw-theme.css  tauriShim.ts
src/renderer/components/: AdvancedSettingsPanel.tsx  LoginWall.tsx  RebateDrawer.tsx  Settings.tsx  Sidebar.tsx
src/renderer/components/common/: WalletBadge.tsx
src/renderer/components/cowork/: CoworkPromptInput.tsx  CoworkView.tsx  (+3 more)
src/renderer/data/: defaultScenarios.ts
src/renderer/services/: api.ts  config.ts  cowork.ts  endpoints.ts  i18n.ts  imageStyles.ts  noobclawApi.ts  noobclawAuth.ts  noobclawSSE.ts  paymentInfoCache.ts  runErrorMessage.ts  scenario.ts  skill.ts  videoCreation.ts  videoQueue.ts  videoTaskStore.ts
src/renderer/types/: electron.d.ts  im.ts  scenario.ts
src/renderer/utils/: shareMessage.ts
(+60 files in other folders)
