[package]
name = "noobclaw"
version = "2.0.0"
description = "NoobClaw - AI Desktop Assistant"
authors = ["NoobClaw"]
edition = "2021"

[lib]
name = "noobclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dirs = "5"
keyring = "3"

# objc2 is only pulled in on macOS for dock-tile badge access. Behind a
# target-specific dep so Windows/Linux builds never link Apple frameworks.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSDockTile"] }
