[package]
name = "noobclaw"
version = "2.2.0"
description = "NoobClaw - AI Desktop Assistant"
authors = ["NoobClaw"]
edition = "2021"

[lib]
name = "noobclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
# NOTE: tauri-plugin-updater (+ tauri-plugin-process) is deliberately
# NOT wired here yet — the plugin requires a base64 ed25519 pubkey
# committed to tauri.conf.json, and we don't want to rotate signing
# keys casually. We ship a lightweight HTTP-based version check from
# the renderer instead (see src/renderer/services/versionCheck.ts)
# which covers the "know a new version exists" case without touching
# the auto-install path. When we're ready to ship true auto-updates
# we generate the keypair via `tauri signer generate`, commit the
# pubkey, add the env var to CI, and re-enable the plugin.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dirs = "5"
keyring = "3"
# Used by the sidecar supervisor for oneshot channels + sleep. Tauri
# already vendors tokio internally, we're just opting into its public
# API so the features are there at link time.
tokio = { version = "1", features = ["sync", "time"] }

# objc2 is only pulled in on macOS for dock-tile badge access. Behind a
# target-specific dep so Windows/Linux builds never link Apple frameworks.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSDockTile"] }
